--- a/src/AppBundle/Styles/modules/_SEL-Service.scss
+++ b/src/AppBundle/Styles/modules/_SEL-Service.scss
@@ -53,8 +53,8 @@ $SEL-Service-border-width: .25rem;
 @mixin SEL-Service() {
     .service-list {
         .service {
-            width: 100%;
-            margin: 0 0 1rem 0;
+            width: calc(100% - 2em);
+            margin: 0 1em 3rem 1em;
 
             header {
                 $header-padding-top: ($SEL-Service-user-image-size / 2) + 1.5rem;
@@ -246,24 +246,6 @@ $SEL-Service-border-width: .25rem;
         .icon {
             opacity: .85;
         }
-
-        @include FAST-breakpoint('medium') {
-            .service {
-                width: 50%;
-            }
-        }
-
-        @include FAST-breakpoint('large') {
-            .service {
-                width: 33.3333%;
-            }
-        }
-
-        @include FAST-breakpoint('xlarge') {
-            .service {
-                width: 25%;
-            }
-        }
     }
 
     .service-author {
@@ -303,14 +285,10 @@ $SEL-Service-border-width: .25rem;
         margin-bottom: .5rem;
     }
 
-    /**
-        TODO: Add a star icon on the flash services
-     */
-
     @include FAST-breakpoint('medium') {
         .service-list {
             .service {
-                width: 50%;
+                width: calc(50% - 2em);
             }
         }
 
@@ -324,7 +302,7 @@ $SEL-Service-border-width: .25rem;
     @include FAST-breakpoint('large') {
         .service-list {
             .service {
-                width: 33.3333%;
+                width: calc(33.3333% - 2em);
             }
         }
     }
@@ -332,7 +310,7 @@ $SEL-Service-border-width: .25rem;
     @include FAST-breakpoint('xlarge') {
         .service-list {
             .service {
-                width: 25%;
+                width: calc(25% - 2em);
             }
         }
     }
