--- a/src/AppBundle/styles/modules/_FAST-Global-Normalize.scss
+++ b/src/AppBundle/styles/modules/_FAST-Global-Normalize.scss
@@ -226,7 +226,6 @@
         border: 0;
         // Grid defaults to get images and embeds to work properly
         max-width: 100%;
-        height: auto;
         -ms-interpolation-mode: bicubic;
 
         // Get rid of gap under images by making them display: inline-block; by default
