--- a/src/AppBundle/styles/modules/_SEL-Wrapper.scss
+++ b/src/AppBundle/styles/modules/_SEL-Wrapper.scss
@@ -25,28 +25,27 @@
     }
 
     .grid-item#{$suffix} {
-        padding: 1rem;
-        float: left;
+        margin: 1rem;
     }
 
     .grid-item-1-4#{$suffix} {
-        width: 25%;
+        width: calc(25% - 2em);
     }
 
     .grid-item-2-4#{$suffix} {
-        width: 50%;
+        width: calc(50% - 2em);
     }
 
     .grid-item-3-4#{$suffix} {
-        width: 75%;
+        width: calc(75% - 2em);
     }
 
     .grid-item-1-3#{$suffix} {
-        width: 33.3333%;
+        width: calc(33.3333% - 2em);
     }
 
     .grid-item-2-3#{$suffix} {
-        width: 66.6666%;
+        width: calc(66.6666% - 2em);
     }
 
     .grid-item-center#{$suffix} {
@@ -99,9 +98,13 @@
     }
 
     .grid {
-        margin: 0 (-1rem);
+        margin: 0 (-1rem);display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
 
-        @include FAST-clearfix();
+        &.text-center {
+            justify-content: center;
+        }
     }
 
     @include FAST-Wrapper-grid-item();
